--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,9 +17,9 @@ jobs:
   # JOB 1 — CONTINUOUS INTEGRATION
   ci:
     name: Validação de Qualidade (CI)
-    if: github.event_name == 'pull_request'
+    # Roda se for PR para master OU se for push na master (pós-merge)
+    if: github.event_name == 'pull_request' || github.event_name == 'push'
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [18, 20]
@@ -75,6 +75,7 @@ jobs:
   # JOB 2 — CONTINUOUS DELIVERY
   cd:
     name: Deploy no GitHub Pages
+    # Só dispara no Push (após o merge) E se o CI passar
     if: github.event_name == 'push'
     needs: ci
     runs-on: ubuntu-latest
